# LAVAR-MTH

./: ACADEMIC_ENG.md  ACADEMIC_KOR.md  README.md  config.py  dataset.py  dynamics.py  losses.py  main.py  models.py  network.py  pyproject.toml  train_stage1.py  train_stage2.py
example/: lavar_daily1.parquet  lavar_daily2.parquet
notebooks/: data_example.ipynb  example.ipynb  lavar_best.pth  lavar_supply_dense_best.pth  lavar_supply_sparse_best.pth  lavar_supply_ultra_best.pth
